[package]
name = "tdnab"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.11", features = ["derive"] }
scraper = "0.15.0"
ureq = "2.6.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
